pulkitchhabra-salesforce/objects/Financial_Account__c.object
<CustomObject>
    <customHelp>WealthHelp</customHelp>
    <description>Custom object used to manage Financial Account information.  This object has a master-detail relationship with Clients (Person Account).</description>
    <fields>
        <fullName>Account_Close__c</fullName>
        <description>Date Financial Account was closed</description>
        <label>Account Close</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Description__c</fullName>
        <description>Description of the Financial Account</description>
        <label>Account Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Account_Opening__c</fullName>
        <description>Date Financial Account was opened</description>
        <label>Account Opening</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <description>Type of Financial Account</description>
        <label>Account Type</label>
        <picklist>
            <picklistValues>
                <fullName>401(k)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>403(b)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>529 Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brokerage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Checking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discount Brokerage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mutual Fund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Savings</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Beneficiary__c</fullName>
        <description>Beneficiaries of the Financial Account</description>
        <label>Beneficiary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <description>Lookup to Client (Person Account)</description>
        <label>Client</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Financial_Account</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Current_Value__c</fullName>
        <description>Current value of the Financial Account based on associated holdings.</description>
        <label>Current Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Financial_Account_Number__c</fullName>
        <description>Account number for Financial Identifier</description>
        <label>Financial Account Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Joint_Party__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Joint ownership of the Financial Account</description>
        <label>Joint Party</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Financial_Account2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Margin__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the financial account is a margin account or not.</description>
        <label>Margin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ownership__c</fullName>
        <description>How the Financical Account is owned</description>
        <label>Ownership</label>
        <picklist>
            <picklistValues>
                <fullName>Individual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joint</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Statement_Address1__c</fullName>
        <description>Address 1 for Financial Account statement address</description>
        <label>Statement Address 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Statement_Address_2__c</fullName>
        <description>Address 2 for Financial Account statement address</description>
        <label>Statement Address 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Statement_City__c</fullName>
        <description>City for Financial Account statement address</description>
        <label>Statement City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Statement_Country__c</fullName>
        <description>Country for Financial Account statement address</description>
        <label>Statement Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Statement_State__c</fullName>
        <description>State for Financial Account statement address</description>
        <label>Statement State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Statement_Zip_Postal_Code__c</fullName>
        <description>Zip / Postal code for Financial Account statement address</description>
        <label>Statement Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the Financial Account</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tax_ID__c</fullName>
        <description>Tax ID of the Financial Account</description>
        <label>Tax ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Status__c</fullName>
        <description>Tax status of the Financial Account</description>
        <label>Tax Status</label>
        <picklist>
            <picklistValues>
                <fullName>Exempt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Exempt</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Trustee__c</fullName>
        <description>Trustees of the Financial Account</description>
        <label>Trustee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Financial Account</label>
    <listViews>
        <fullName>AllFinancialAccounts</fullName>
        <columns>NAME</columns>
        <columns>Financial_Account_Number__c</columns>
        <columns>Client__c</columns>
        <columns>Current_Value__c</columns>
        <columns>Status__c</columns>
        <columns>Account_Type__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Financial Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyFinancialAccountsClosed</fullName>
        <columns>NAME</columns>
        <columns>Financial_Account_Number__c</columns>
        <columns>Client__c</columns>
        <columns>Current_Value__c</columns>
        <columns>Account_Type__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>My Financial Accounts - Closed</label>
    </listViews>
    <listViews>
        <fullName>MyFinancialAccountsOnHold</fullName>
        <columns>NAME</columns>
        <columns>Financial_Account_Number__c</columns>
        <columns>Client__c</columns>
        <columns>Current_Value__c</columns>
        <columns>Account_Type__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>On Hold</value>
        </filters>
        <label>My Financial Accounts - On Hold</label>
    </listViews>
    <listViews>
        <fullName>MyFinancialAccountsOpen</fullName>
        <columns>NAME</columns>
        <columns>Financial_Account_Number__c</columns>
        <columns>Client__c</columns>
        <columns>Current_Value__c</columns>
        <columns>Account_Type__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>My Financial Accounts - Open</label>
    </listViews>
    <listViews>
        <fullName>MyFinancialAccountsOver5Million</fullName>
        <columns>NAME</columns>
        <columns>Financial_Account_Number__c</columns>
        <columns>Client__c</columns>
        <columns>Current_Value__c</columns>
        <columns>Status__c</columns>
        <columns>Account_Type__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Current_Value__c</field>
            <operation>greaterOrEqual</operation>
            <value>5000000</value>
        </filters>
        <label>My Financial Accounts - Over $5 Million</label>
    </listViews>
    <nameField>
        <label>Financial Account Name/ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Accounts</pluralLabel>
    <recordTypes>
        <fullName>Banking</fullName>
        <active>true</active>
        <description>Record type used for bank acconts (saving, checking, etc)</description>
        <label>Banking</label>
    </recordTypes>
    <recordTypes>
        <fullName>Brokerage</fullName>
        <active>true</active>
        <description>Recrod type used to track brokerage accounts</description>
        <label>Brokerage</label>
    </recordTypes>
    <recordTypes>
        <fullName>CreditCard</fullName>
        <active>true</active>
        <description>Record type to track credit card accounts.</description>
        <label>Credit Card</label>
    </recordTypes>
    <recordTypes>
        <fullName>FinancialAccounts</fullName>
        <active>true</active>
        <description>General record type used for Wealth Management accounts</description>
        <label>Financial Accounts</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>